# disk-relocator

./: 02-compatibility-tier-list.md  03-migration-and-rollback-flow.md  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
archive/: README.md  freeze-review-2026-03-05.md
docs/: 01-feasibility-and-boundary.md  02-compatibility-tier-list.md  03-migration-and-rollback-flow.md  04-mvp-spec-and-acceptance.md  05-risk-and-test-plan.md  ROADMAP.md  TODO.md  faq.md  github-release-workflow.md  health-fix-and-rollback-guide.md  release-known-limitations.md  release-test-matrix.md  rollback-runbook.md  validation-wechat.md
scripts/: check-scaffold.sh
specs/v1/: app-profiles.json  error-codes.md  freeze-review-2026-03-05.md  sqlite-schema.sql  state-machine.md  tauri-command-contract.md
src/: App.vue  i18n.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bootstrap.rs  commands.rs  db.rs  health.rs  main.rs  migration.rs  models.rs  profiles.rs  reconcile.rs  recovery.rs
src/components/: AppListView.vue  HealthPanelView.vue  MigrationDialog.vue  MigrationStatusView.vue  OperationLogExportView.vue  ReconcileTaskView.vue
src/types/: contracts.ts
src/utils/: error.ts
tests/acceptance/: README.md  run-smoke.sh
tests/frontend/: App.spec.ts  AppListView.spec.ts  HealthPanelView.spec.ts  I18n.spec.ts  MigrationDialog.spec.ts  OperationLogExportView.spec.ts  error-format.spec.ts
(+2 files in other folders)
