[package]
name = "disk-relocator"
version = "0.1.7"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
fs2 = "0.4"
glob = "0.3"
notify = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sysinfo = "0.37"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.6.0"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
